--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,11 @@
-/*=============== GOOGLE FONTS ===============*/
+/*Google Fonts*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
 /*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3.5rem;
 
-  /*========== Colors ==========*/
+  /*colors*/
   --first-color: hsl(31, 100%, 70%);
   --button-color: hsl(0, 0%, 17%);
   --button-color-alt: hsl(0, 0%, 21%);
@@ -16,7 +16,7 @@
   --container-color: #fff;
   --border-color: hsl(0, 0%, 94%);
 
-  /*========== Font and typography ==========*/
+  /*fonts*/
   --body-font: 'Roboto', sans-serif;
   --biggest-font-size: 2rem;
   --h1-font-size: 1.5rem;
@@ -26,11 +26,11 @@
   --small-font-size: .813rem;
   --smaller-font-size: .75rem;
 
-  /*========== Font weight ==========*/
+  /*font weight*/
   --font-medium: 500;
   --font-bold: 700;
 
-  /*========== Margenes Bottom ==========*/
+  /* Margenes Bottom*/
   --mb-0-5: .5rem;
   --mb-0-75: .75rem;
   --mb-1: 1rem;
@@ -39,7 +39,7 @@
   --mb-2-5: 2.5rem;
   --mb-3: 3rem;
 
-  /*========== z index ==========*/
+  /*z index*/
   --z-tooltip: 10;
   --z-fixed: 100;
 }
@@ -56,7 +56,7 @@
   }
 }
 
-/*=============== BASE ===============*/
+/*Base*/
 * {
   box-sizing: border-box;
   padding: 0;
@@ -70,8 +70,8 @@ html {
 body,
 button,
 input {
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
+  font-family: 'Roboto', sans-serif;
+  font-size: .938rem;
 }
 
 body {
@@ -106,8 +106,8 @@ button {
   outline: none;
 }
 
-/*=============== THEME ===============*/
-/*========== Variables Dark theme ==========*/
+/*theme*/
+/*dark theme*/
 body.dark-theme {
   --first-color: hsl(31, 76%, 74%);
   --button-color: hsl(0, 0%, 24%);
@@ -119,17 +119,14 @@ body.dark-theme {
   --border-color: hsl(0, 0%, 20%);
 }
 
-/*========== Button Dark/Light ==========*/
+/*Button Dark/Light*/
 .change-theme {
   color: var(--title-color);
   font-size: 1.25rem;
   cursor: pointer;
 }
 
-/*========== 
-    Color changes in some parts of 
-    the website, in dark theme 
-==========*/
+/*Color changes in some parts of the website, in dark theme */
 .dark-theme .change-theme,
 .dark-theme .nav__toggle,
 .dark-theme .nav__shop,
@@ -151,7 +148,7 @@ body.dark-theme {
   background: hsl(0, 0%, 30%);
 }
 
-/*=============== REUSABLE CSS CLASSES ===============*/
+/*reusable css classes*/
 .container {
   max-width: 1024px;
   margin-left: var(--mb-1-5);
@@ -191,7 +188,7 @@ body.dark-theme {
   background-color: var(--first-color);
 }
 
-/*=============== HEADER & NAV ===============*/
+/*header and navigation bar*/
 .header {
   width: 100%;
   background: transparent;
@@ -298,7 +295,7 @@ body.dark-theme {
   color: var(--first-color);
 }
 
-/*=============== HOME ===============*/
+/*home*/
 .home__container {
   position: relative;
   row-gap: 2.5rem;
@@ -366,7 +363,7 @@ body.dark-theme {
   box-shadow: 0 12px 24px hsla(0, 0%, 10%, .2);
 }
 
-/*=============== BUTTONS ===============*/
+/*buttons*/
 .button {
   display: inline-block;
   background-color: var(--button-color);
@@ -393,7 +390,7 @@ body.dark-theme {
   padding: 1rem 1.5rem;
 }
 
-/*=============== FEATURED ===============*/
+/*features*/
 .featured__container {
   row-gap: 2.5rem;
 }
@@ -463,7 +460,7 @@ body.dark-theme {
   margin-bottom: var(--mb-1-5);
 }
 
-/*=============== STORY ===============*/
+/*story part*/
 .story__container {
   row-gap: 7.5rem;
 }
@@ -497,7 +494,7 @@ body.dark-theme {
   top: -3rem;
 }
 
-/*=============== PRODUCTS ===============*/
+/*products*/
 .products__container {
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
@@ -551,7 +548,7 @@ body.dark-theme {
   box-shadow: 0 8px 32px hsla(0, 0%, 10%, .1);
 }
 
-/*=============== TESTIMONIAL ===============*/
+/*testimonial*/
 .testimonial__container {
   row-gap: 4rem;
 }
@@ -654,7 +651,7 @@ body.dark-theme {
   left: 4rem;
 }
 
-/*=============== NEW ===============*/
+/*New part*/
 .new__card {
   position: relative;
   text-align: center;
@@ -730,7 +727,7 @@ body.dark-theme {
   margin-bottom: var(--mb-1-5);
 }
 
-/*=============== NEWSLETTER ===============*/
+/*newsletter*/
 .newsletter__bg {
   background-color: var(--first-color);
   padding: 3rem 1.5rem;
@@ -762,7 +759,7 @@ body.dark-theme {
   color: hsl(0, 0%, 15%);
 }
 
-/*=============== FOOTER ===============*/
+/*footer=*/
 .footer__container {
   row-gap: 2rem;
   border-bottom: 1px solid var(--border-color);
@@ -811,7 +808,7 @@ body.dark-theme {
   color: var(--text-color-light);
 }
 
-/*=============== SCROLL UP ===============*/
+/*scroll up*/
 .scrollup {
   position: fixed;
   right: 1rem;
@@ -839,7 +836,7 @@ body.dark-theme {
   bottom: 3rem;
 }
 
-/*=============== SCROLL BAR ===============*/
+/*scroll bar*/
 ::-webkit-scrollbar {
   width: .6rem;
   background: hsl(0, 0%, 74%);
@@ -849,7 +846,7 @@ body.dark-theme {
   background: hsl(0, 0%, 17%);
 }
 
-/*=============== CART ===============*/
+/*cart*/
 .cart {
   position: fixed;
   background-color: var(--body-color);
@@ -963,7 +960,7 @@ body.dark-theme {
   right: 0;
 }
 
-/*=============== BREAKPOINTS ===============*/
+/*breakpoints*/
 /* For small devices */
 @media screen and (max-width: 320px) {
   .container {
